--- a/_slides/example.html
+++ b/_slides/example.html
@@ -7,7 +7,6 @@ description: >-
 theme: sains
 highlight: monokai
 ---
-
 # Section 1
 
 This is section 1.
@@ -28,10 +27,16 @@ class Testing123():
 
 -down-
 
+`$\LaTeX$` can be render in markdown slide by using command as:
+```
+`$$ J(\theta_0,\theta_1) = \sum_{i=0} $$`
+```
+and will produce
 `$$ J(\theta_0,\theta_1) = \sum_{i=0} $$`
 
 -down-
 
+Another \LaTeX
 `\[\begin{aligned}
 \dot{x} &amp; = \sigma(y-x) \\
 \dot{y} &amp; = \rho x - y - xz \\
@@ -74,10 +79,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
 ## Subsection 3.2
 
-<!-- ![Sample image](https://s3.amazonaws.com/static.slid.es/logo/v2/slides-symbol-512x512.png) -->
-
-Lorem ipsum dolor sit amet, 
-consectetur adipiscing elit. 
+![Sample image](https://s3.amazonaws.com/static.slid.es/logo/v2/slides-symbol-512x512.png)
 
 -next-
 
@@ -90,7 +92,14 @@ consectetur adipiscing elit.
 
 # Section 5
 
-<iframe data-src="https://lerryws.xyz/" data-preload></iframe>
+
+-down-
+
+<!-- 
+    .slide: 
+        data-background-iframe="https://www.dailymail.co.uk/home/index.html"
+        data-background-interactive
+-->
 
 -next-
 
@@ -103,3 +112,42 @@ ayam masak kicap
 - point 2
 - point 3
 - point 4
+
+-next-
+
+## Slide 1
+
+<table>
+    <tr>
+      <th>A</th>
+      <th>Suppliers (agree to) deliver</th>
+      <th>Operations (increasing inventory by $X)</th>
+    </tr>
+    <tr>
+      <td></td>
+      <td>inventory</td>
+      <td>→ Create accounting vehicle (increasing)</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>suppliers</td>
+      <td></td>
+    </tr>
+    <tr>
+      <th>B</th>
+      <th>Customers (agree to) acquire</th>
+      <th>Operations (decreasing inventory by $Y)</th>
+    </tr>
+    <tr>
+      <td></td>
+      <td>that inventory</td>
+      <td>→ Create accounting vehicle (booking)</td>
+    </tr>
+  </table>
+  
+
+
+-next-
+
+## Slide 2
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
