--- a/_slides/solarized.html
+++ b/_slides/solarized.html
@@ -1,12 +1,13 @@
 ---
 layout: slide
 thumbnail: thumb_reveal.jpg
-title: Sains Slide with GIF
+title: solarized theme
 description: >-
-    Reveal.js  sains-anime theme  powered by Jekyll
-theme: sains-anime
+    Reveal.js sains theme powered by Jekyll
+theme: solarized
 highlight: monokai
 ---
+
 # Section 1
 
 This is section 1.
@@ -27,16 +28,10 @@ class Testing123():
 
 -down-
 
-`$$\LaTeX$$` can be render in markdown slide by using command as:
-```
-`$$ J(\theta_0,\theta_1) = \sum_{i=0} $$`
-```
-and will produce
 `$$ J(\theta_0,\theta_1) = \sum_{i=0} $$`
 
 -down-
 
-Another \LaTeX
 `\[\begin{aligned}
 \dot{x} &amp; = \sigma(y-x) \\
 \dot{y} &amp; = \rho x - y - xz \\
@@ -79,7 +74,10 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
 ## Subsection 3.2
 
-![Sample image](https://s3.amazonaws.com/static.slid.es/logo/v2/slides-symbol-512x512.png)
+<!-- ![Sample image](https://s3.amazonaws.com/static.slid.es/logo/v2/slides-symbol-512x512.png) -->
+
+Lorem ipsum dolor sit amet, 
+consectetur adipiscing elit. 
 
 -next-
 
@@ -112,42 +110,3 @@ ayam masak kicap
 - point 2
 - point 3
 - point 4
-
--next-
-
-## Slide 1
-
-<table>
-    <tr>
-      <th>A</th>
-      <th>Suppliers (agree to) deliver</th>
-      <th>Operations (increasing inventory by $X)</th>
-    </tr>
-    <tr>
-      <td></td>
-      <td>inventory</td>
-      <td>→ Create accounting vehicle (increasing)</td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>suppliers</td>
-      <td></td>
-    </tr>
-    <tr>
-      <th>B</th>
-      <th>Customers (agree to) acquire</th>
-      <th>Operations (decreasing inventory by $Y)</th>
-    </tr>
-    <tr>
-      <td></td>
-      <td>that inventory</td>
-      <td>→ Create accounting vehicle (booking)</td>
-    </tr>
-  </table>
-  
-
-
--next-
-
-## Slide 2
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
