--- a/_slides/example.html
+++ b/_slides/example.html
@@ -4,6 +4,8 @@ thumbnail: thumb_reveal.jpg
 title: Sains Theme for Reveal.js
 description: >-
     Reveal.js sains theme powered by Jekyll
+location: Tower ABC
+date: 10 July 2024
 theme: sains
 highlight: monokai
 ---
@@ -27,12 +29,12 @@ class Testing123():
 
 -down-
 
-`$\LaTeX$` can be render in markdown slide by using command as:
+$\LaTeX$ can be render in markdown slide by using command as:
 ```
-`$$ J(\theta_0,\theta_1) = \sum_{i=0} $$`
+$$ J(\theta_0,\theta_1) = \sum_{i=0} $$
 ```
-and will produce
-`$$ J(\theta_0,\theta_1) = \sum_{i=0} $$`
+
+and will produce $$ J(\theta_0,\theta_1) = \sum_{i=0} $$
 
 -down-
 
