--- a/_slides/example.html
+++ b/_slides/example.html
@@ -153,3 +153,33 @@ ayam masak kicap
 
 ## Slide 2
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+
+-next-
+
+# Iframe : Image
+
+-down-
+
+## 🐟
+<!-- 
+    .slide:
+        data-background-gradient="linear-gradient(to bottom, #283b95, #17b2c3)"
+-->
+
+-down-
+
+## 🐳
+<!-- 
+    .slide:
+        data-background-gradient="radial-gradient(#283b95, #17b2c3)"
+-->
+
+-down-
+
+## Leaflets.js
+
+<!-- 
+    .slide:
+        data-background-iframe="https://mergin.cartopixels.com"
+        data-background-interactive
+-->
