add bootstrap, fontawesome locally

--- a/_slides/example.html
+++ b/_slides/example.html
@@ -189,8 +189,10 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
 ## Leaflets.js
 
+-down-
+
 <!-- 
     .slide:
-        data-background-iframe="https://mergin.cartopixels.com"
+        data-background-iframe="https://ipchicken.com/"
         data-background-interactive
 -->
