add bootstrap, fontawesome locally

--- a/_slides/example.html
+++ b/_slides/example.html
@@ -9,6 +9,15 @@ date: 10 July 2024
 theme: sains
 highlight: monokai
 ---
+# Contents
+
+- [Section 1](#/2)
+  - [Subsection 1](#/2/1)
+- [Section 2](#/3)
+- [Section 3](#/4)
+
+-next-
+
 # Section 1
 
 This is section 1.
