--- a/_slides/index.html
+++ b/_slides/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://cdn.dribbble.com/users/418188/screenshots/6238708/tubik_moonworkers_404_page_illustration.png" alt="404 Image"> <!-- Adjust path to your image -->
+        <img src="../assets/images/404.png" alt="404 Image"> <!-- Adjust path to your image -->
         <h1>Page Not Found</h1>
         <p>Sorry, the page you are looking for does not exist.</p>
     </div>
