update revealjs to latest version

--- a/_slides/example.html
+++ b/_slides/example.html
@@ -1,6 +1,6 @@
 ---
 layout: slide
-thumbnail: thumb_reveal.jpg
+thumbnail: thumb_reveal.png
 title: Sains Theme for Reveal.js
 description: >-
     Reveal.js sains theme powered by Jekyll
