--- a/_slides/example2.html
+++ b/_slides/example2.html
@@ -1,6 +1,6 @@
 ---
 layout: slide
-thumbnail: thumb_reveal.jpg
+thumbnail: thumb_reveal.png
 title: Sains Slide with GIF
 description: >-
     Reveal.js  sains-anime theme  powered by Jekyll
