--- a/_slides/example3.html
+++ b/_slides/example3.html
@@ -1,6 +1,6 @@
 ---
 layout: slide
-thumbnail: thumb_reveal.jpg
+thumbnail:
 title: Sains Gradient
 description: >-
     Reveal.js sains-gradient theme  powered by Jekyll
